# reconfig

./: .coverage  LICENSE  README.md  main.py  pyproject.toml
reconfig/: __init__.py  import_types.py  reconfig.py
test/: test_absolute_and_relative_imports.py  test_circular_import.py  test_config_builder.py  test_config_builder_conflicts.py  test_double_dot_import.py  test_from_import.py  test_from_import_as.py  test_from_import_many.py  test_from_import_star.py  test_import.py  test_import_as.py  test_import_star.py  test_import_types.py  test_integration.py  test_override.py
test/configs/circular_import/: root.toml
test/configs/from_import_as_conflict/: root.toml
test/configs/from_import_as_name_missing/: root.toml
test/configs/from_import_many_conflict/: root.toml
test/configs/from_import_many_name_missing/: root.toml
test/configs/from_import_one_conflict/: root.toml
test/configs/from_import_one_name_missing/: root.toml
test/configs/from_import_star_conflict/: root.toml
test/configs/from_import_star_conflict_section/: root.toml
test/configs/from_import_star_empty/: root.toml
test/configs/from_import_star_happy/: root.toml
test/configs/from_import_star_nested/: root.toml
test/configs/happy/: root.toml
test/configs/happy_nested_imports/: root.toml
test/configs/import_as_conflict/: root.toml
test/configs/import_conflict/: root.toml
test/configs/imports_invalid_import/: root.toml
test/error_configs/conf_circular_import/: root.toml
test/error_configs/conf_override/: root_a.toml
test/error_configs/conf_override_import_star/: a.toml  (+1 more)
(+70 files in other folders)
