[project]
name = "reconfig"
version = "0.3.0"
description = "Reconfig is a configuration management tool for TOML. It includes recursive import mechanism so that configurations can be across multiple files."
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.11",
]
